# psi

./: .gitignore  .todo.md  CHANGELOG.md  Cargo.toml  README.md  example.calc  perf.txt  spec.md
compiler/: Cargo.toml
compiler/src/: ]  learn.rs  main.rs
example/: Cargo.toml  test.psi
example/src/: main.rs
examples/: arithmetic.psi  semicolon.psi  simple.psi  variables.psi  variables.py
src/: chunk.rs  compiler.rs  enums.rs  error.rs  expr.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  namespace.rs  precedence.rs  psi.pest  table.rs  value.rs  vm.rs
tests/: test.rs
