[package]
name = "psi-lang"
version = "0.3.0"
authors = ["curlpipe <11898833+curlpipe@users.noreply.github.com>"]
description = "A language for configuration and extension"
homepage = "https://github.com/curlpipe/psi"
repository = "https://github.com/curlpipe/psi"
license = "MIT"
readme = "README.md"
keywords = ["language", "embeddable", "scripting"]
edition = "2018"

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
mimalloc = { version = "0.1.24", default-features = false }
pest = "2.1.3"
pest_consume = "1.0.6"
quick-error = "2.0.0"
rustc-hash = "1.1.0"
smartstring = "0.2.6"
