[package]
name = "psibyte"
version = "0.1.7"
authors = ["curlpipe <11898833+curlpipe@users.noreply.github.com>"]
edition = "2018"

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "2.33.3", default-features = false }
round = "0.1.0"
scanln = "0.1.1"
thiserror = "1.0.24"
lliw = "0.1.1"
unicode-width = "0.1.8"
unicode-segmentation = "1.7.1"
