[package]
name = "psi-example"
version = "0.1.0"
authors = ["curlpipe <11898833+curlpipe@users.noreply.github.com>"]
edition = "2018"

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
psibyte = { version = "0", path = "../" }
clap = { version = "2.33.3", default-features = false }
lliw = "0.1.1"
scanln = "0.1.1"
